Update all makefiles so that they install shared objects

--- a/gfx/src/Makefile
+++ b/gfx/src/Makefile
@@ -54,7 +54,6 @@ ifeq ($(OS),Windows_NT)
 else
 	CFLAGS += -fpic
 	SRCS += $(XLIB_SRCS)
-	LDFLAGS += -L../../widget/src -lraptorwidget
 endif
 
 
@@ -62,6 +61,7 @@ build: $(SHARED_LIB)
 
 $(SHARED_LIB): $(OBJS)
 	$(CXX) -shared -o $@ $(OBJS) $(LDFLAGS)
+	cp $(SHARED_LIB) ../../xpfe/bootstrap
 
 .c.o:
 	$(CC) $(CFLAGS) $(INCLUDES) -MMD -MP -MT $@ -o $@ -c $<
