--- a/modules/Makefile
+++ b/modules/Makefile
@@ -3,8 +3,10 @@
 build:
 	@(cd libimg && $(MAKE))
 	@(cd libpref && $(MAKE))
+	@(cd security && $(MAKE))
 
 clean:
 	@(cd libimg && $(MAKE) clean)
 	@(cd libpref && $(MAKE) clean)
+	@(cd security && $(MAKE) clean)
 
