--- a/modules/libpref/src/Makefile
+++ b/modules/libpref/src/Makefile
@@ -51,6 +51,7 @@ $(STATIC_LIB): $(OBJS)
 
 $(SHARED_LIB): $(OBJS)
 	$(CXX) -shared -o $@ $(OBJS) $(LD_FLAGS)
+	cp $(SHARED_LIB) ../../../xpfe/bootstrap
 
 .c.o:
 	$(CC) $(CFLAGS) $(INCLUDES) -fpic -MMD -MP -MT $@ -o $@ -c $<
