--- a/modules/security/freenav/Makefile
+++ b/modules/security/freenav/Makefile
@@ -49,6 +49,7 @@ $(STATIC_LIB): $(OBJS)
 
 $(SHARED_LIB): $(OBJS)
 	$(CXX) -shared -o $@ $(OBJS) $(LDFLAGS)
+	cp $(SHARED_LIB) ../../../xpfe/bootstrap
 
 .c.o:
 	$(CC) $(CFLAGS) $(DEFINES) $(INCLUDES) -MMD -MP -MT $@ -o $@ -c $<
