--- a/network/protocol/Makefile
+++ b/network/protocol/Makefile
@@ -1,10 +1,18 @@
 # network/protocol master makefile
 
 build:
+	@(cd about && $(MAKE))
 	@(cd file && $(MAKE))
+	@(cd ftp && $(MAKE))
+	@(cd gopher && $(MAKE))
 	@(cd http && $(MAKE))
+	@(cd remote && $(MAKE))
 
 clean:
+	@(cd about && $(MAKE) clean)
 	@(cd file && $(MAKE) clean)
+	@(cd ftp && $(MAKE) clean)
+	@(cd gopher && $(MAKE) clean)
 	@(cd http && $(MAKE) clean)
+	@(cd remote && $(MAKE) clean)
 
